<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAccent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="144dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/trainerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainerName"
                android:textAlignment="viewEnd"
                android:textColor="@color/textPrimary"
                android:textSize="16sp"
                app:layout_column="1"
                app:layout_row="1" />

            <TextView
                android:id="@+id/nameLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardName"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/moneyLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/trainerCardLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trainer_card"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/dexLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokedex"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/timeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                app:layout_column="0"
                app:layout_row="4" />

            <TextView
                android:id="@+id/trainerIDTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/idTxt"
                android:textAlignment="gravity"
                app:layout_column="2"
                app:layout_row="0" />

            <TextView
                android:id="@+id/moneyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneyTxt"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/dexTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pokesKnown"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                app:layout_column="1"
                app:layout_row="3" />

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeTxt"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                app:layout_column="1"
                app:layout_row="4" />

            <ImageView
                android:id="@+id/trainerImg"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:contentDescription="@string/TrainerImg"
                app:layout_column="2"
                app:layout_gravity="center"
                app:layout_row="1"
                app:layout_rowSpan="4"
                tools:srcCompat="@tools:sample/avatars" />
        </android.support.v7.widget.GridLayout>
    </LinearLayout>

    <Button
        android:id="@+id/genTeamBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="152dp"
        android:background="@color/backgroundPrimary"
        android:text="@string/generate_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="10dp"
        android:text="@string/credit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genTeamBtn" />
</android.support.constraint.ConstraintLayout>