<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundAccent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_trainer"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcomeParagraph"
        android:textSize="18sp"
        android:background="@color/backgroundAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:background="@drawable/rectangle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeInfo">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/infoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_fill_out_your_trainer_card"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/genderQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/genderQuestionLbl"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_column="0"
                app:layout_row="1" />

            <RadioGroup
                android:id="@+id/genderGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="2">

                <RadioButton
                    android:id="@+id/boyRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/textPrimary"
                    android:checked="true"
                    android:text="@string/boyLbl" />

                <RadioButton
                    android:id="@+id/girlRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/textPrimary"
                    android:text="@string/girlTxt" />
            </RadioGroup>

            <TextView
                android:id="@+id/nameQuestionLbl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameQuestionTxt"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_column="0"
                app:layout_row="3" />

            <EditText
                android:id="@+id/nameEntryTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/name"
                android:ems="10"
                android:hint="@string/name"
                android:textColorHint="@color/textPrimary"
                android:inputType="textPersonName"
                android:textAlignment="center"
                app:layout_column="0"
                app:layout_row="4"
                android:textColor="@color/textPrimary"
                />
        </android.support.v7.widget.GridLayout>
    </LinearLayout>

    <Button
        android:id="@+id/generateTrainerBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="100dp"
        android:background="@color/backgroundPrimary"
        android:text="@string/generate_trainer_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>