<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/pokePictureHolder"
        android:layout_width="135dp"
        android:layout_height="84dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/pokemonspriteimg"
            app:srcCompat="@mipmap/ic_launcher_round" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pokeInfoHolder"
        android:layout_width="256dp"
        android:layout_height="85dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pokePictureHolder"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/nameLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/typeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameTxt"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                app:layout_column="1"
                app:layout_row="1" />

            <TextView
                android:id="@+id/typeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeTxt"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                app:layout_column="1"
                app:layout_row="2" />

            <TextView
                android:id="@+id/fillerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                app:layout_column="1"
                app:layout_row="3" />

        </android.support.v7.widget.GridLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>